--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     width: 500px;
     height: 500px;
     margin: 20px auto;
-    background-color: #fff;
+    background-color: white;
     border: 2px solid black;
 }
 
@@ -25,21 +25,10 @@ body {
     background-color: lightgray;
 }
 
-.home-red {
-    background-color: red;
-}
-
-.home-blue {
-    background-color: blue;
-}
-
-.home-green {
-    background-color: green;
-}
-
-.home-yellow {
-    background-color: yellow;
-}
+.home-red { background-color: red; }
+.home-blue { background-color: blue; }
+.home-green { background-color: green; }
+.home-yellow { background-color: yellow; }
 
 .player {
     width: 90%;
@@ -49,18 +38,7 @@ body {
     position: relative;
 }
 
-.red {
-    background: red;
-}
-
-.blue {
-    background: blue;
-}
-
-.green {
-    background: green;
-}
-
-.yellow {
-    background: yellow;
-}
+.red { background: red; }
+.blue { background: blue; }
+.green { background: green; }
+.yellow { background: yellow; }
